--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,3 +11,64 @@
     background-color: aliceblue;
     border-radius: 0.3em;
 }
+
+.spinner {
+    width: 100px;
+    height: 100px;
+    margin: 50px auto;
+    border: 11px solid rgba(22,22,22,0.2);
+    border-left-color: rgba(0,0,255,0.5);
+    border-radius: 50%;
+    animation: load 1.5s infinite linear;
+}
+
+@-webkit-keyframes load {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+
+.loading2 {
+    width: 50px;
+    height: 50px;
+    margin: auto;
+}
+
+.loading2 > div {
+    display: inline-block;
+    width: 6px;
+    margin: 2px;
+    height: 100%;
+    background: green;
+    animation: strechdelay 1.2s infinite ease-in-out;
+}
+
+.loading2 .line2 {
+    animation-delay: -1.1s;
+}
+
+.loading2 .line3 {
+    animation-delay: -1.0s;
+}
+
+.loading2 .line4 {
+    animation-delay: -0.9s;
+}
+
+.loading2 .line5 {
+    animation-delay: -0.8s;
+}
+
+@-webkit-keyframes strechdelay {
+    0%, 40%, 100% {
+        transform: scaleY(0.4);
+    }
+
+    20% {
+        transform: scaleY(1);
+    }
+}
